--- a/CSS/style.css
+++ b/CSS/style.css
@@ -242,6 +242,12 @@ p {
 a {
   text-decoration: none;
 }
+
+a:hover {
+  background-color: #03a9f4;
+  transform: scale(1.1);
+  transition: 0.4s;
+}
 @media (max-width: 1000px) {
   .container {
     grid-template-columns: repeat(1, 2fr);
